--- a/dest/output.css
+++ b/dest/output.css
@@ -117,6 +117,10 @@
   width: 100%;
 }
 
+.w-10{
+  width: 2.5rem;
+}
+
 .max-w-3xl{
   max-width: 48rem;
 }
@@ -296,6 +300,11 @@
   line-height: 1.75rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -327,6 +336,10 @@
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\]{
+  color: ;
 }
 
 .no-underline{
@@ -482,4 +495,48 @@ td, th{
 .hover\:text-\[\#5ac2fc\]:hover{
   --tw-text-opacity: 1;
   color: rgb(90 194 252 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px){
+  .sm\:h-12{
+    height: 3rem;
+  }
+
+  .sm\:w-12{
+    width: 3rem;
+  }
+
+  .sm\:w-auto{
+    width: auto;
+  }
+
+  .sm\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .sm\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 768px){
+  .md\:flex{
+    display: flex;
+  }
+
+  .md\:hidden{
+    display: none;
+  }
 }
